# tempo2

./: .gitattributes  .gitignore  .swp  BTJmodel.C  BTXmodel.C  BTmodel.C  DDGRmodel.C  DDHmodel.C  DDKmodel.C  DDSmodel.C  DDmodel.C  Doxyfile  ELL1Hmodel.C  ELL1kmodel.C  ELL1model.C  GWgeneralsim.h  GWgeneralsim_anisotropic.h  GWsim.C  GWsim.h  GWsim_anisotropic.h  GWsim_dipole.h  GWsim_general.C  GWsim_general.h  MSSmodel.C  Makefile  Makefile.am  Makefile.common  Makefile.config  README  README.md  T2-PTAmodel.C  T2accel.C  T2accel.h  T2model.C  T2toolkit.C  T2toolkit.h  TKcholesky.h  TKfit.C  TKfit.h  TKlog.C  (+143 more)
T2runtime/atmosphere/: pks.sap  pks.zwd
T2runtime/clock/: README  ao2gps.clk  ao2nist.clk  aus2utc.clk  eff2gps.clk  effix2gps.clk  gb1402nist.clk  gb8532nist.clk  gbt2gps.clk  gps2utc.clk  jb2gps.clk  jb422jb.clk  jb422jbafb.clk  jbafb2gps.clk  jbafb2utc.clk  jbdfb2gps.clk  jbdfb2jb.clk  jbm42gps.clk  jbmk22jb.clk  jbmk2dfb2jbdfb.clk  jbmk2roach2jbroach.clk  jbroach2gps.clk  jbroach2jb.clk  leap.sec  leap2effix.clk  mk2utc.clk  mo2gps.clk  ncyobs2obspm.clk  nist2tai.clk  nist2tt_nist.clk  nist2utc.clk  obspm2gps.clk  obspm2utc.clk  parsebipm2019.py  pks2aus.clk  pks2aus.clk.bk  pks2gps.clk  pks2gps_ltr.clk  pks2tid.clk  pks2tt_toasim.clk  (+33 more)
T2runtime/earth/: README  eopc04_IAU2000.62-now  update_eop.sh
T2runtime/example_data/: example1.par  example1.tim
T2runtime/observatory/: aliases
T2runtime/plugin_data/: ppdot.lis
T2runtime/plugins/mjk_darwin13_plug.t2.dSYM/Contents/: Info.plist
autoconf.boot/: calceph.m4  cula.m4  fftw.m4  mjk_fortran_test.m4  multinest.m4  package.m4  pgplot.m4  qd.m4
documentation/: 1_USER_GUIDE.md  2_developers.md  4_directories.md  5_plugins.md  DEVELOPER_GUIDE.md  README
mpack_lite/: Makefile.am  makemake.sh  mblas-routines  mpack-routines
mpack_lite/mlapack-lite/reference/: iMlaenv.cpp
plugin/: GWanisobkgrd_plug.C  GWanisobkgrd_plug.Cbbb  GWbkgrd_plug.C  GWbkgrdfromfile_plug.C  GWdetect_plug.C  GWdipolebkgrd_plug.C  GWdipolebkgrd_plug.Cbbb  GWevolve_plug.C  GWevolve_plug.Cbbb  GWgeneralanisobkgrd_plug.C  GWgeneralanisobkgrd_plug.Cbbb  GWgeneralbkgrd_plug.C  GWsens_plug.C  GWsens_plug.Cbbb  GWsingle_plug.C  GWsingle_plug.Cbbb  GWwhiteLimit_plug.C  GWwhiteLimit_plug.Cbbb  Makefile  Makefile.am  addRed_plug.C  addRed_plug.Cbbb  add_pulseNumber_plug.C  analyticChol_plug.C  angle_plug.C  angle_plug.Cbbb  applet_plug.C  applet_plug.Cbbb  autoDM_plug.C  autoDM_plug.Cbbb  autoSpectralFit_plug.C  autoSpectralFit_plug.Cbbb  averageData_plug.C  averageData_plug.Cbbb  bary_plug.C  bary_plug.Cbbb  basic_plug.C  calcDMe_plug.C  calcDMe_plug.Cbbb  checkWhite_plug.C  (+81 more)
plugin/plugin_lists/: cfitsio.plugins  gsl.plugins  pgplot.plugins  pgplot_cfitsio.plugins  pgplot_fftw.plugins  vanilla.plugins
python/t2pred/: setup.py  t2pred.pyx  t2pred_loops.c  t2pred_loops.h
python/toasim/: setup.py
python/toasim/toasim/: __init__.py  toasim.py
sofa/: Makefile  Makefile.am
temponest/: Makefile.am  MultiNestParams.cpp  TempoNest.h  TempoNestGPULikeFuncs.cpp  TempoNestGPULinearLikeFuncs.cpp  TempoNestLikeFuncs.cpp  TempoNestLinearLikeFuncs.cpp  TempoNestParams.cpp  TempoNestPlugin.cpp  TempoNestSim.cpp  TempoNestTextOutput.cpp  TempoNestUtilities.cpp  temponest.am
temponest/multinest/: multinest.am
tests/: Makefile.am  custom-test-driver  gtest_extensions.h  test1.par  testEndToEnd.C  testTKfit.C  testTKmatrix.C  testTempo2.C
tests/gtest-1.7.0/include/gtest/: gtest.h
tests/gtest-1.7.0/src/: gtest.cc
tests/test_data/: test1.tim  test2.tim  test3.par  test3.tim  test3_jb.par  test3_jb.tim  test3b.par  test3c.par  test_1937_2020.par  test_1937_2020.tim  test_de430.par  test_de430.tim
tests/test_data/test4/: global.par  test4A.par  test4A.tim  test4B.par  test4B.tim  test4C.par  test4C.tim
unsupported_plugins/: Makefile.am
unsupported_plugins/glast/: Makefile.am  build.sh  glast_plug.C
unsupported_plugins/mjkbayes/: make_mjkbayes.sh  mjkbayes.h  mjkbayes_plug.C  mjknest.h
unsupported_plugins/ppta/: Makefile.am  build.sh  ppta_dr1_splug.C
unsupported_plugins/splug/: Makefile.am  build.sh  jbo_splug.C
unsupported_plugins/toasim/: Makefile.am  add2state_plug.C  addArbitraryDM_plug.C  addCGW_plug.C  addChromVar_plug.C  addDmVar_plug.C  addGWB_plug.C  addGaussian_plug.C  addInstrumentalIssues_plug.C  addOutliers_plug.C  addRedNoise_plug.C  build.sh  createRealisation_plug.C  formIdeal_plug.C  makeRedNoise.C  makeRedNoise.h  read_toasim.c  toasim.c  toasim.h  toasim_compute.c  toasim_io.c
unsupported_plugins/toasim/python/: TOA_characterise.py  fake_GWsources.py  fake_badpoints.py  fake_dmvar.py  fake_nongaussian.py  fake_rfi.py  toasim.py
